--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
       CAMINHO_PROJETO_WEBAPP: ./APITemperatura
       NOME_WEBAPP_AZURE: groffegithubactions
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
